--- a/src/components/pages/card.scss
+++ b/src/components/pages/card.scss
@@ -8,7 +8,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-  
+ 
     .content {
       font-family: "Open Sans";
       text-align: center;
@@ -19,11 +19,11 @@
       cursor: pointer;
       h1 {
         font-size: 14px;
-        color: white;
+        color: black;
       }
       p {
         font-size: 10px;
-        color: white;
+        color: black;
         margin-bottom: 20px;
       }
   
