changed color theme

--- a/src/components/pages/card.scss
+++ b/src/components/pages/card.scss
@@ -19,16 +19,19 @@
       cursor: pointer;
       h1 {
         font-size: 14px;
-        color: black;
+        color: white;
       }
       p {
         font-size: 10px;
-        color: black;
+        color: white;
         margin-bottom: 20px;
       }
   
       .btn {
         background-color: black;
+        background-image: linear-gradient(
+120deg
+,#2583ee 25%,#712f90 75%);
         color: white;
         padding: 10px;
         text-decoration: none;
