--- a/src/components/pages/Header.scss
+++ b/src/components/pages/Header.scss
@@ -1,3 +1,11 @@
+*{
+  background-color: rgb(20,22,42);
+  
+
+  color: white;
+   
+}
+
 .header-wrapper {
     width: 80vw;
     margin-top: 10vh;
