--- a/src/components/pages/contact.scss
+++ b/src/components/pages/contact.scss
@@ -19,7 +19,7 @@
   }
   .email-link {
     font-size: 1.5rem;
-    color: black;
+    color: white;
   }
   .social-icons {
     margin-top: 20px;
@@ -37,5 +37,10 @@
 }
 .container{
   margin: 25px 25px 25px 25px;
+}
+.button-color{
+  background-image: linear-gradient(
+120deg
+,#2583ee 25%,#712f90 75%);
 }
 
