--- a/src/components/pages/Header.scss
+++ b/src/components/pages/Header.scss
@@ -33,4 +33,105 @@
     
   }
 
-  
+  .bgimg {
+  background-image: url("../../Images/new-york-wallpaper.jpg");
+    height: 100vh;
+    width: 100%;
+    background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover; 
+  }
+
+element.style {
+  white-space: nowrap;
+}
+.title {
+  background-color: #000;
+  text-align: center;
+  padding: 18px;
+  z-index: 10;
+}
+.w3-display-middle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
+}
+.w3-wide {
+  letter-spacing: 10px;
+}
+.w3-black, .w3-hover-black:hover {
+  color: #fff!important;
+  background-color: #000!important;
+}
+.w3-center {
+  text-align: center!important;
+  font-size: 24px!important;
+}
+
+.w3-wide {
+  letter-spacing: 4px;
+}
+*, *::after, *::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+Style Attribute {
+  white-space: nowrap;
+}
+.title {
+  background-color: #000;
+  text-align: center;
+  padding: 18px;
+  z-index: 10;
+}
+body {
+  font-family: "Lato", sans-serif;
+}
+body, html {
+  height: 100%;
+  color: #272727;
+  line-height: 1.8;
+  background: linear-gradient(to right, #f7b229, #dc6c11);
+  background-size: cover;
+}
+html, body {
+  font-family: Verdana,sans-serif;
+  font-size: 15px;
+  line-height: 1.5;
+}
+html {
+  font-size: 62.5%;
+}
+html {
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+*, *::after, *::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+*, *::after, *::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+0% {
+  opacity: 0;
+}
+100% {
+  opacity: 1;
+}
